syntax = "proto3";

option go_package="GoldenCity/gin;GoldenCitygin";

import "base.proto";
import "v1.goldencity.bet.proto";

message TGoldenCityRecordReq
{
    string      token       = 1;  
    int64       starttime   = 2;  // 开始时间，时间戳数值到豪秒
    int64       endtime     = 3;  // 结束时间，时间戳数值到豪秒
    int32       limit       = 4;  // 查询数量, 客户端发送（30）条
    int32       offset      = 5;  // 偏移量, 首次发0, 第2次发30，第三次发60
}

// 游戏记录列表
message TGoldenCityRecordInfo
{
    int64                           bet                     = 1;  
    int32                           freetimes               = 2;    //触发的总免费次数
    int64                           wintotal                = 3;    //一次旋转到不能再消除后，赢得总金额-投注，含所有免费赢得
    string                          orderid                 = 4;    //订单ID
    int64                           createtime              = 5;    //记录创建时间
    int32                           normalremovecount       = 6;    //普通旋转的消除次数
    int32                           freeremovecount         = 7;    //免费旋转的总消除次数
    TProtoGoldenCityBetType         buytype                 = 8;    //投注类型
}

// 游戏记录列表返回
message TGoldenCityRecordRsp
{
  repeated TGoldenCityRecordInfo  record      = 1;  //记录列表数组
  int64                           totalbet    = 2;    //查询时间内总投注
  int64                           totalprofit = 3;    //查询时间内总盈利需要减去总投注
  int64                           totalcount  = 4;    //查询时间内总记录条数
}